# AI-Agents-Projects

./: LICENSE  README.md
resume_checker_agent/: pyproject.toml  requirements.txt
resume_checker_agent/knowledge/: add_pdf_folder.txt  info.txt
resume_checker_agent/src/: __init__.py  crew.py  main.py
resume_checker_agent/src/config/: tasks.yaml
resume_checker_agent/src/resume_checker_agent/: crew.py  main.py
resume_checker_agent/src/resume_checker_agent/config/: agents.yaml
resume_checker_agent/src/resume_checker_agent/tools/: search_tool.py
resume_checker_agent/src/tools/: __init__.py
