[project]
name = "resume_checker_agent"
version = "1.0.0"
description = "resume-checker-agent using crewAI"
authors = [{ name = "Omar Rashed", email = "omarrashedhassan1@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0",
    "duckduckgo-search>=7.5.2",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
resume_checker_agent = "src.main:run"
run_crew = "src.main:run"
train = "src.main:train"
replay = "src.main:replay"
test = "src.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
